--- a/QuickSSL.vcxproj
+++ b/QuickSSL.vcxproj
@@ -110,6 +110,10 @@
   <ItemGroup>
     <Image Include="favicon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="LICENSE" />
+    <None Include="readme.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
